# easycontainer

./: .gitignore  Cargo.toml  Dockerfile  Makefile  build.sh
easycontainer/: Cargo.toml
easycontainer/src/: build_docker_image.rs  config.rs  docker_rust.rs  main.rs  platform.rs
easycontainer_example_supervisor/: Cargo.toml  Dockerfile
easycontainer_example_supervisor/services/: serviceA.toml
easycontainer_example_supervisor/src/: main.rs
easycontainer_lib/: Cargo.toml
easycontainer_lib/src/process/: mod.rs  service.rs
example_supervisor/: Cargo.toml  Dockerfile
example_supervisor/services/: serviceB.toml
example_workspace/: Cargo.toml  Dockerfile
example_workspace/binary_a/: Cargo.toml
example_workspace/binary_a/src/: main.rs
example_workspace/binary_b/: Cargo.toml
example_workspace/binary_b/src/: main.rs
