[package]
name = "easycontainer"
version = "0.1.0"
authors = ["timglabisch <tim@ainfach.de>"]
edition = "2021"

[dependencies]
anyhow = "1.*"
tokio = { version = "1.*", features = ["full"] }
tracing-subscriber = "0.2"
tracing = "0.1.*"
futures = "0.3.*"
structopt = { version = "0.3.*", default-features = true }
