[package]
name = "easycontainer_example_supervisor"
version = "0.1.0"
authors = ["timglabisch <tim@ainfach.de>"]
edition = "2021"

[dependencies]
easycontainer_lib = { path = "../easycontainer_lib" }
anyhow = "1.*"
tokio = { version = "1.*", features = ["full"] }
tracing-subscriber = "0.2"
tracing = "0.1.*"